# pulse-wallet

./: .gitignore  .gitleaks.toml  LICENSE  README.md  SECURITY-AUDIT.md
.githooks/: pre-commit
.github/workflows/: secret-scan.yml
apps/macos/: README.md  Signing.xcconfig.example  project.yml
apps/macos/PulseWallet.xcodeproj/: project.pbxproj
apps/macos/PulseWallet.xcodeproj/xcshareddata/xcschemes/: PulseWallet.xcscheme
apps/macos/Resources/: Info.plist  PulseWallet.entitlements
apps/macos/Resources/Assets.xcassets/AccentColor.colorset/: Contents.json
apps/macos/Resources/Assets.xcassets/AppIcon.appiconset/: Contents.json
apps/macos/Sources/PulseWallet/: AppModel.swift  PulseWalletApp.swift
apps/macos/Sources/PulseWallet/Crypto/: Biometrics.swift  DataHex.swift  EnclaveSigner.swift  KeyStore.swift  KeyToolkit.swift  Keychain.swift  PulseCore.swift  PulseCoreFFI.swift  SecretVault.swift  YubiKeyPIV.swift
apps/macos/Sources/PulseWallet/Design/: Theme.swift  ThemeStore.swift
apps/macos/Sources/PulseWallet/Models/: Models.swift
apps/macos/Sources/PulseWallet/Network/: Hyperion.swift  NetworkStore.swift  PulseRPC.swift
apps/macos/Sources/PulseWallet/Support/: QRCode.swift  WalletError.swift
apps/macos/Sources/PulseWallet/Views/: AccountHealth.swift  ActivityView.swift  ComingSoonView.swift  (+20 more)
apps/macos/scripts/: release-dmg.sh
core/: Cargo.toml  README.md
core/src/: ffi.rs  lib.rs  tx.rs
scripts/: build-core-macos.sh  install-hooks.sh  make-icon.swift  package-dmg.sh
spike/: Package.swift  README.md
spike/Sources/EnclaveSpike/: main.swift
(+2 files in other folders)
