[package]
name = "pulse-wallet-core"
version = "0.0.1"
edition = "2021"
description = "Shared PulseVM wallet core: R1 key/signature encoding, recovery-id derivation, RPC."

[lib]
# staticlib → link into the macOS app (C ABI); rlib → unit tests + future uniffi.
crate-type = ["staticlib", "rlib"]

[dependencies]
p256 = { version = "0.13", features = ["ecdsa"] }
k256 = { version = "0.13", features = ["ecdsa"] }
ecdsa = "0.16"
rand_core = { version = "0.6", features = ["getrandom"] }
ripemd = "0.1"
sha2 = "0.10"
bs58 = "0.5"
hex = "0.4"
serde_json = "1"
